--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
     "terminal.integrated.fontSize": 15,
     "workbench.colorTheme": "Dracula",
     "workbench.iconTheme": "vscode-icons",
+    "editor.minimap.enabled": false,
 }
